# dpaitrade

./: .gitignore  README.md  generate_sample_data.py  pyproject.toml
data/: BTCUSD#_D1.csv  BTCUSD#_H4.csv  BTCUSD#_M15.csv  BTCUSD_D1.csv  BTCUSD_M15.csv
src/dpaitrade/: __init__.py
src/dpaitrade/agent/: __init__.py  interface.py
src/dpaitrade/backtest/: __init__.py  engine.py
src/dpaitrade/cli/: run_backtest.py
src/dpaitrade/core/: __init__.py  types.py
src/dpaitrade/data/: __init__.py  loaders.py
src/dpaitrade/execution/: __init__.py  simulator.py
src/dpaitrade/risk/: __init__.py  guard.py
src/dpaitrade/strategy/: __init__.py  d1 Regime  h4_pullback.py  m15 Entry.py  policy.py  signal Builder.py
src/dpaitrade/structure/: __init__.py  analyzer.py  state.py
src/dpaitrade/tests/: test Strategy Pipeline.py
