[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dpaitrade"
version = "0.1.0"
description = "面向研究与回测的 AI 交易工程骨架"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Wei Duan" }
]
dependencies = [
  "pydantic>=2.6,<3.0",
  "PyYAML>=6.0,<7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.3,<1.0",
  "mypy>=1.8,<2.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
